; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_objects.c_vlclua_get_aout.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_objects.c_vlclua_get_aout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@vlclua_aout_release = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @vlclua_get_aout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlclua_get_aout(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32* @vlclua_get_aout_internal(i32* %4)
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = load i32*, i32** %2, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @VLC_OBJECT(i32* %10)
  %12 = load i32, i32* @vlclua_aout_release, align 4
  %13 = call i32 @vlclua_push_vlc_object(i32* %9, i32 %11, i32 %12)
  br label %17

14:                                               ; preds = %1
  %15 = load i32*, i32** %2, align 8
  %16 = call i32 @lua_pushnil(i32* %15)
  br label %17

17:                                               ; preds = %14, %8
  ret i32 1
}

declare dso_local i32* @vlclua_get_aout_internal(i32*) #1

declare dso_local i32 @vlclua_push_vlc_object(i32*, i32, i32) #1

declare dso_local i32 @VLC_OBJECT(i32*) #1

declare dso_local i32 @lua_pushnil(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
